# Alb-Track

./: .env  .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  routes.rs  types.rs
backend/src/db/: connector.rs
backend/src/handlers/: albs.rs  churches.rs  mod.rs  relations.rs  users.rs
frontend/: app.js  index.html
frontend/alb_add/: app.js  index.html
frontend/church_add/: app.js  index.html
frontend/church_fetch/: app.js  index.html
frontend/user_add/: app.js
frontend/user_fetch/: app.js  index.html
tools/: Cargo.toml
tools/src/: main.rs
